Starting to Display
Initial display of images, such as title screen and background for the
game. Use pcx2gba to allow reading images for gba by creating header
files that contain arrays of the data from the pcx formatted image.

--- a/roundhouse_playhouse/roundhouse_playhouse/roundhouse_playhouse.vcxproj
+++ b/roundhouse_playhouse/roundhouse_playhouse/roundhouse_playhouse.vcxproj
@@ -68,6 +68,8 @@
     <ClCompile Include="main.c" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="assets\background.h" />
+    <ClInclude Include="assets\titlescreen.h" />
     <ClInclude Include="gba.h" />
     <ClInclude Include="gfx.h" />
     <ClInclude Include="keypad.h" />
