--- a/roundhouse_playhouse/roundhouse_playhouse/roundhouse_playhouse.vcxproj
+++ b/roundhouse_playhouse/roundhouse_playhouse/roundhouse_playhouse.vcxproj
@@ -69,10 +69,12 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="assets\background.h" />
+    <ClInclude Include="assets\player_still.h" />
     <ClInclude Include="assets\titlescreen.h" />
     <ClInclude Include="gba.h" />
     <ClInclude Include="gfx.h" />
     <ClInclude Include="keypad.h" />
+    <ClInclude Include="sound.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
