The End is Nigh

--- a/roundhouse_playhouse/roundhouse_playhouse/roundhouse_playhouse.vcxproj
+++ b/roundhouse_playhouse/roundhouse_playhouse/roundhouse_playhouse.vcxproj
@@ -69,9 +69,12 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="assets\background.h" />
+    <ClInclude Include="assets\fight.h" />
+    <ClInclude Include="assets\lose.h" />
     <ClInclude Include="assets\opponent_still.h" />
     <ClInclude Include="assets\player_still.h" />
     <ClInclude Include="assets\titlescreen.h" />
+    <ClInclude Include="assets\win.h" />
     <ClInclude Include="gba.h" />
     <ClInclude Include="gfx.h" />
     <ClInclude Include="keypad.h" />
